# DimensionalCUDA

./: .gitignore  CMakeLists.txt  LICENSE  README.md  dim_cuda.cu  dim_cuda.cuh  dim_cuda.h  gpu_math.cuh  gpu_types.cuh  main.cu  tester.cuh  timer.h
